css singel movie

--- a/html/singleMovie.html
+++ b/html/singleMovie.html
@@ -39,17 +39,35 @@
     </nav>
 
   </div>
-  <div id="MainHome"  >
-  <input id="searchByIdInput" type="number">
-  <img src="../images/search icon.png" id="searchIdButton"/>
-    <section id="moviePresentation" >    
-    <section id="movieTitle" ></section>
-    <section id="dateAndRuntime" ></section>
-    <section id="movieGenre" ></section>
-    <section id="movieCrew" ></section>
+  <div class="pageClass" id="MainHome"  >
+    <div class="searchInputAndBtn">
+      <input id="searchByIdInput" type="number">
+      <i id="searchIdButton" class="fa-solid fa-magnifying-glass"></i> 
+    </div>
+ 
+    <section class="moviePresentation" id="moviePresentation" >    
+      <div class="movieImgAndMore">
+        <div>
+          <p></p>
+          <p></p><br><br>
+          <section id="MoviePoster" ></section>
+        </div>
+        <div>
+          <br><br>
+          <section id="movieTitle" ></section>
+          <section id="dateAndRuntime" ></section>
+          <section id="movieGenre" ></section>
+          <br>
+          <section id="movieCrew" ></section>
+        </div>
+
+
+      </div>
+
 <br>
     <section id="movieCast" ></section>
-    <section id="MoviePoster" ></section>
+    <br><br>
+
 </section>
 
   </div>
