--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,15 @@
   <link rel="stylesheet" href="css/home.css">
   <title>Movie Wiki</title>
 </head>
+
 <body>
   <div id="headerHome">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class=" navbar navbar-expand-lg navbar-dark bg-dark ">
       <a class="navbar-brand" href="#">Movie Wiki</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarText">
+      <div class="collapse navbar-collapse navbar11" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -32,42 +34,44 @@
             <a class="nav-link" href="html/about.html">About</a>
           </li>
         </ul>
-        <span class="navbar-text">
-          Navbar text with an inline element
-        </span>
+
       </div>
     </nav>
+  </div>
 
-  </div>
-</div>
-<div id="MainHome">
-  <div class="btnsDayAndWeekDiv">
-    <button class="btnDayAndWeek" id="dailyId" >Daily</button>
-    <button class="btnDayAndWeek" id="weeklyId">Weekly</button> 
-  </div>
-  <section class="moviesPresentationClass" id="moviesPresentation"></section>
-  <nav aria-label="...">
+  <div id="MainHome">
+    <br><p></p><br>
+
+    <div class="btnsDayAndWeekDiv">
+      <button class="btnDayAndWeek glow-on-hover " id="dailyId" onclick="changePopularity('day')">Daily</button>
+      <button class="btnDayAndWeek glow-on-hover " id="weeklyId" onclick="changePopularity('week')">Weekly</button>
+    </div>
+    <br><p></p><br>
+
+    <section class="moviesPresentationClass" id="moviesPresentation"></section>
+    <nav aria-label="...">
       <ul class="pagination">
         <li class="page-item disabled">
-          <a class="page-link">Previous</a>
+          <a class="page-link" href="#" onclick="changePage('Previous')">Previous</a>
         </li>
-        <li class="page-item"><a class="page-link" >1</a></li>
+        <li class="page-item"><a class="page-link" href="#" onclick="changePage(1)">1</a></li>
         <li class="page-item active" aria-current="page">
-          <a class="page-link" >2</a>
+          <a class="page-link" href="#" onclick="changePage(2)">2</a>
         </li>
-        <li class="page-item"><a class="page-link" >3</a></li>
-        <li class="page-item"><a class="page-link" >4</a></li>
-        <li class="page-item"><a class="page-link" >5</a></li>
+        <li class="page-item"><a class="page-link" href="#" onclick="changePage(3)">3</a></li>
+        <li class="page-item"><a class="page-link" href="#" onclick="changePage(4)">4</a></li>
+        <li class="page-item"><a class="page-link" href="#" onclick="changePage(5)">5</a></li>
         <li class="page-item">
-          <a class="page-link" >Next</a>
+          <a class="page-link" href="#" onclick="changePage('Next')">Next</a>
         </li>
       </ul>
-</nav>
-</div>
-<div id="footerHome"></div>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/c1abb53e9d.js" crossorigin="anonymous"></script>
-<script src="js/home.js"></script>
+    </nav>
+  </div>
+  <div id="footerHome"></div>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/c1abb53e9d.js" crossorigin="anonymous"></script>
+  <script src="js/home.js"></script>
 </body>
+
 </html>
