--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="css/home.css">
+    <link rel="icon" type="image/x-icon" href="https://static.thenounproject.com/png/2535513-200.png">
+
   <title>Movie Wiki</title>
 </head>
 
 <body>
   <div id="headerHome">
     <nav class=" navbar navbar-expand-lg navbar-dark bg-dark ">
-      <a class="navbar-brand" href="#">Movie Wiki</a>
+      <a id="movieTitel" class="navbar-brand" href="../index.html"><b>Movie Magic</b></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,8 +47,8 @@
     <br><p></p><br>
 
     <div class="btnsDayAndWeekDiv">
-      <button class="btnDayAndWeek glow-on-hover " id="dailyId" onclick="changePopularity('day')">Daily</button>
-      <button class="btnDayAndWeek glow-on-hover " id="weeklyId" onclick="changePopularity('week')">Weekly</button>
+      <button class="btnDayAndWeek" id="dailyId" onclick="changePopularity('day')">Daily</button>
+      <button class="btnDayAndWeek" id="weeklyId" onclick="changePopularity('week')">Weekly</button>
     </div>
     <br><p></p><br>
 
@@ -67,7 +71,25 @@
       </ul>
     </nav>
   </div>
-  <div id="footerHome"></div>
+  <div id="footerHome">
+    <div class="footr">
+      <div class="footer-basic">
+          <footer>
+              <div class="social"><a href="https://www.instagram.com/nitzan__bs/"><i class="icon ion-social-instagram"></i></a><a href="https://github.com/nitzanbs"><i class="icon ion-social-github"></i></a><a href="https://www.linkedin.com/in/nitzan-ben-shimon-417024285/"><i class="icon ion-social-linkedin"></i></a><a href="https://www.facebook.com/nitzanbs248"><i class="icon ion-social-facebook"></i></a></div>
+              <ul class="list-inline">
+                  <li class="list-inline-item"><a href="./index.html">Home</a></li>
+                  <li class="list-inline-item"><a href="./html/singleMovie.html">Movie info</a></li>
+                  <li class="list-inline-item"><a href="./html/searchMovie.html">Search Movie</a></li>
+                  <li class="list-inline-item"><a href="./html/favorites.html">Favorites</a></li>
+                  <li class="list-inline-item"><a href="./html/about.html">About</a></li>
+              </ul>
+              <p class="copyright">NBS © 2024</p>
+          </footer>
+      </div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/c1abb53e9d.js" crossorigin="anonymous"></script>
